fixed footer overflow issue

--- a/vite-frontend/src/components/footer/footer.css
+++ b/vite-frontend/src/components/footer/footer.css
@@ -1,6 +1,11 @@
 .footer {
     background-color: rgb(31, 31, 31);
     color: white;
+    
+}
+
+.footer > div {
+    max-width: 100vw;
 }
 
 .footer > div {
